--- a/assets/style.css
+++ b/assets/style.css
@@ -55,3 +55,38 @@ h2 {
 .hidden {
     display: none;
 }
+
+.btn {
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: rgb(28, 26, 26);
+    background: #fff;
+    border-radius: 4px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 10px 10px 8px #888888;
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+}
+
+#highscore-btn {
+    background: rgb(28, 187, 110)
+}
+
+#highscore-btn:hover {
+    box-shadow: 10px 10px 8px #888888;
+}
+
+.fa-crown {
+    font-size: 2.5rem;
+    margin-left: 1rem;
+}
